--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 <body>
     <div class="card">
         <h2>Código e Design: Meu Portfólio de Desenvolvimento Web</h2> 
-        <img src="https://via.placeholder.com/300x200" alt="Imagem do leonardo">
+        <img src="./image/image card.jpg" alt="Imagem do leonardo">
         <div class="content">
             <p>Ola meu nome e Marco Antonio e bem-vindo ao meu portfólio de desenvolvimento web,
                 onde a criatividade encontra a tecnologia para dar vida a ideias inovadoras.
                 Sou um desenvolvedor web e tenho experiencia em HTML5, CSS3, JS, REACT.JS, REACT NATIVE, NEXT.JS e tambem costumo programar jogos no Game Maker Studios.</p>
-            <p>Proprietário: Endereço do Proprietário</p>
         </div>
     </div>
 </body>
