Adding the card list with qualities

--- a/index.html
+++ b/index.html
@@ -16,5 +16,12 @@
                 Sou um desenvolvedor web e tenho experiencia em HTML5, CSS3, JS, REACT.JS, REACT NATIVE, NEXT.JS e tambem costumo programar jogos no Game Maker Studios.</p>
         </div>
     </div>
+    <div class="qualities">
+        <h2>Qualidades</h2>
+        <div class="card">
+            <h3>Qualidade 1</h3>
+            <p>Descrição da primeira qualidade.</p>
+        </div>
+    </div>
 </body>
 </html>
