--- a/index.html
+++ b/index.html
@@ -16,11 +16,24 @@
                 Sou um desenvolvedor web e tenho experiencia em HTML5, CSS3, JS, REACT.JS, REACT NATIVE, NEXT.JS e tambem costumo programar jogos no Game Maker Studios.</p>
         </div>
     </div>
+    <div class="qualities-container">
+        <h2 class="qualities-title">Qualidades</h2>
     <div class="qualities">
-        <h2>Qualidades</h2>
         <div class="card">
-            <h3>Qualidade 1</h3>
-            <p>Descrição da primeira qualidade.</p>
+            <img src="./image/image card-2.jpeg" alt="Imagem do ideogram">
+            <h3>JS</h3>
+        </div>
+        <div class="card">
+            <img src="./image/image card-3.jpeg" alt="Imagem do ideogram">
+            <h3>CSS3</h3>
+        </div>
+        <div class="card">
+            <img src="./image/image card-4.jpeg" alt="Imagem do ideogram">
+            <h3>HTML5</h3>
+        </div>
+        <div class="card">
+            <img src="./image/image card-5.jpeg" alt="Imagem do ideogram">
+            <h3>REACT</h3>
         </div>
     </div>
 </body>
