Adding more images of cards with ideogram

--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
             <img src="./image/image card-5.jpeg" alt="Imagem do ideogram">
             <h3>REACT</h3>
         </div>
+        <div class="card">
+            <img src="./image/image card-6.jpeg" alt="Imagem do ideogram">
+            <h3>REACT NATIVE</h3>
+        </div>
+        <div class="card">
+            <img src="./image/image card-4.jpeg" alt="Imagem do ideogram">
+            <h3>HTML5</h3>
+        </div>
+        <div class="card">
+            <img src="./image/image card-5.jpeg" alt="Imagem do ideogram">
+            <h3>REACT</h3>
+        </div>
     </div>
 </body>
 </html>
