Adding the latest ideogram images

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
             <h3>REACT NATIVE</h3>
         </div>
         <div class="card">
-            <img src="./image/image card-4.jpeg" alt="Imagem do ideogram">
-            <h3>HTML5</h3>
+            <img src="./image/image card-7.jpeg" alt="Imagem do ideogram">
+            <h3>TAILWIND CSS</h3>
         </div>
         <div class="card">
-            <img src="./image/image card-5.jpeg" alt="Imagem do ideogram">
-            <h3>REACT</h3>
+            <img src="./image/image card-8.jpeg" alt="Imagem do ideogram">
+            <h3>GAME MAKER</h3>
         </div>
     </div>
 </body>
