Adding the header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Início</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Portfólio</a></li>
+                <li><a href="#">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="card">
         <h2>Código e Design: Meu Portfólio de Desenvolvimento Web</h2> 
         <img src="./image/image card.jpg" alt="Imagem do leonardo">
